route_table_public.tf
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.test.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.test.id

  }
  tags = {
    Name = var.route_table_public_name
  }
}
